Fixed z-index

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -11,7 +11,7 @@
   height: 42px;
   padding: 0;
   margin: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .navbar li {
